# logdashboard

./: .gitignore  README.md  docker-compose.dev.yaml
services/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  main.py  migrate.sh  pyproject.toml  schema.prisma
services/backend/app/: database.py
services/backend/app/api/: logs.py
services/backend/app/models/: log_models.py
services/backend/app/services/: create_log.py  delete_log.py  generate_logs.py  get_aggregated_logs.py  get_log.py  get_logs.py  update_log.py
services/backend/migrations/20250929065106_/: migration.sql
services/frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
services/frontend/src/api/: create-logs.api.ts  create-logs.schema.ts  delete-log.api.ts  download-logs.api.ts  generate-logs.api.ts  generate-logs.schema.ts  get-aggregated-logs.api.ts  get-aggregated-logs.schema.ts  get-log.api.ts  get-log.schema.ts  get-logs.api.ts  get-logs.schema.ts  index.ts  update-log.api.ts  update-log.schema.ts
services/frontend/src/app/: layout.tsx  page.tsx  state.ts
services/frontend/src/app/[log_id]/: page.tsx  state.ts
services/frontend/src/components/ui/: calendar.tsx  card.tsx  chart.tsx  date-picker.tsx  input.tsx  popover.tsx  select.tsx
services/frontend/src/constants/: index.ts  severity.ts
services/frontend/src/lib/: severity.ts
services/frontend/src/model/: log.ts
