[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with Prisma ORM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "prisma>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "uuid-utils>=0.11.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "autoflake>=2.2.0",
]
